updated benchmarks for 1.3

--- a/benchmarks/1.3/DocumentActions-report.html
+++ b/benchmarks/1.3/DocumentActions-report.html
@@ -17,15 +17,15 @@ BenchmarkDotNet=v0.10.1, OS=Microsoft Windows NT 6.1.7601 Service Pack 1
 Processor=Intel(R) Core(TM) i7-4980HQ CPU 2.80GHz, ProcessorCount=4
 Frequency=10000000 Hz, Resolution=100.0000 ns, Timer=UNKNOWN
   [Host]     : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
-  DefaultJob : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
+  Job-DNINOD : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
 </code></pre>
-<pre><code>Gen 0=120.8333  Allocated=4.62 MB  
+<pre><code>WarmupCount=2  Gen 0=287.5000  Allocated=4.62 MB  
 </code></pre>
 
 <table>
 <thead><tr><th>   Method</th><th>Mean</th><th>StdDev</th>
 </tr>
-</thead><tbody><tr><td>InsertDocuments</td><td>39.8690 ms</td><td>0.2782 ms</td>
+</thead><tbody><tr><td>InsertDocuments</td><td>43.7957 ms</td><td>2.6786 ms</td>
 </tr></tbody></table>
 </body>
 </html>
