--- a/benchmarks/1.3/EventActions-report.html
+++ b/benchmarks/1.3/EventActions-report.html
@@ -17,15 +17,15 @@ BenchmarkDotNet=v0.10.1, OS=Microsoft Windows NT 6.1.7601 Service Pack 1
 Processor=Intel(R) Core(TM) i7-4980HQ CPU 2.80GHz, ProcessorCount=4
 Frequency=10000000 Hz, Resolution=100.0000 ns, Timer=UNKNOWN
   [Host]     : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
-  DefaultJob : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
+  Job-DNINOD : Clr 4.0.30319.42000, 64bit RyuJIT-v4.6.1076.0
 </code></pre>
-<pre><code>Gen 0=98.3607  Allocated=1.88 MB  
+<pre><code>WarmupCount=2  Allocated=1.88 MB  
 </code></pre>
 
 <table>
 <thead><tr><th>Method</th><th>Mean</th><th>StdDev</th>
 </tr>
-</thead><tbody><tr><td>AppendEvents</td><td>41.2638 ms</td><td>1.5906 ms</td>
+</thead><tbody><tr><td>AppendEvents</td><td>41.1983 ms</td><td>1.1924 ms</td>
 </tr></tbody></table>
 </body>
 </html>
