--- a/documentation/documents/querying/index.html
+++ b/documentation/documents/querying/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.3.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -92,7 +92,7 @@
 			      	<div id="main-pane">
 			      		<!--Title: Querying Documents-->
 <p>Marten provides a wide variety of support for querying documents:</p>
-<ul class="table-of-contents"><li><a href="/marten/documentation/documents/querying/linq">Querying Documents with Linq</a></li><li><a href="/marten/documentation/documents/querying/async">Asynchronous Querying</a></li><li><a href="/marten/documentation/documents/querying/sql">Querying with Postgresql SQL</a></li><li><a href="/marten/documentation/documents/querying/projections">Document Projections</a></li><li><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a></li><li><a href="/marten/documentation/documents/querying/include">Including Related Documents</a></li><li><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></li><li><a href="/marten/documentation/documents/querying/batched_queries">Batched Queries</a></li><li><a href="/marten/documentation/documents/querying/paging">Paging</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/documents/querying/linq">Querying Documents with Linq</a></li><li><a href="/marten/documentation/documents/querying/async">Asynchronous Querying</a></li><li><a href="/marten/documentation/documents/querying/sql">Querying with Postgresql SQL</a></li><li><a href="/marten/documentation/documents/querying/projections">Document Projections</a></li><li><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a></li><li><a href="/marten/documentation/documents/querying/include">Including Related Documents</a></li><li><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></li><li><a href="/marten/documentation/documents/querying/batched_queries">Batched Queries</a></li><li><a href="/marten/documentation/documents/querying/metadata_queries">Metadata Queries</a></li><li><a href="/marten/documentation/documents/querying/paging">Paging</a></li></ul>
 
 			      	</div>
 
