--- a/documentation/documents/advanced/soft_deletes/index.html
+++ b/documentation/documents/advanced/soft_deletes/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.3.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -99,7 +99,7 @@ documents marked as <em>deleted</em> unless you explicitly state otherwise in th
 <p>You can direct Marten to make a document type soft deleted by either marking the class with an attribute:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[SoftDeleted]&#xD;&#xA;public class SoftDeletedDoc&#xD;&#xA;{&#xD;&#xA;    public Guid Id;&#xD;&#xA;}&#xD;&#xA;</code></pre>
 <p>Or by using the fluent interface off of <code>StoreOptions</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(ConnectionSource.ConnectionString);&#xD;&#xA;    _.Schema.For&lt;User&gt;().SoftDeleted();&#xD;&#xA;});&#xD;&#xA;&#xD;&#xA;store.Dispose();&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xD;&#xA;DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Schema.For&lt;User&gt;().SoftDeleted();&#xD;&#xA;});&#xD;&#xA;</code></pre>
 <h2 id="querying-a-soft-deleted-document-type">Querying a &quot;Soft Deleted&quot; Document Type</h2>
 <p>By default, Marten quietly filters out documents marked as deleted from Linq queries as demonstrated
 in this acceptance test from the Marten codebase:</p>
@@ -116,6 +116,11 @@ as shown in this acceptance tests:</p>
 <p>You can also query for only documents that are marked as deleted with Marten's <code>IsDeleted()</code> method
 as shown below:</p>
 <pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void query_is_soft_deleted_docs()&#xD;&#xA;{&#xD;&#xA;    var user1 = new User { UserName = &quot;foo&quot; };&#xD;&#xA;    var user2 = new User { UserName = &quot;bar&quot; };&#xD;&#xA;    var user3 = new User { UserName = &quot;baz&quot; };&#xD;&#xA;    var user4 = new User { UserName = &quot;jack&quot; };&#xD;&#xA;&#xD;&#xA;    using (var session = theStore.OpenSession())&#xD;&#xA;    {&#xD;&#xA;        session.Store(user1, user2, user3, user4);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;&#xD;&#xA;        session.DeleteWhere&lt;User&gt;(x =&gt; x.UserName.StartsWith(&quot;b&quot;));&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;&#xD;&#xA;        // no where clause&#xD;&#xA;        session.Query&lt;User&gt;().Where(x =&gt; x.IsDeleted()).OrderBy(x =&gt; x.UserName).Select(x =&gt; x.UserName)&#xD;&#xA;            .ToList().ShouldHaveTheSameElementsAs(&quot;bar&quot;, &quot;baz&quot;);&#xD;&#xA;&#xD;&#xA;        // with a where clause&#xD;&#xA;        session.Query&lt;User&gt;().Where(x =&gt; x.UserName != &quot;baz&quot; &amp;&amp; x.IsDeleted())&#xD;&#xA;            .OrderBy(x =&gt; x.UserName)&#xD;&#xA;            .ToList()&#xD;&#xA;            .Select(x =&gt; x.UserName)&#xD;&#xA;            .Single().ShouldBe(&quot;bar&quot;);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<h2 id="fetching-documents-deleted-before-or-after-a-specific-time">Fetching Documents Deleted before or after a specific time</h2>
+<p>To search for documents that have been deleted before a specific time use Marten's <code>DeletedBefore(DateTimeOffset)</code> method
+and the counterpart <code>DeletedSince(DateTimeOffset)</code> as show below:</p>
+<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void query_is_soft_deleted_since_docs()&#xD;&#xA;{&#xD;&#xA;    var user1 = new User { UserName = &quot;foo&quot; };&#xD;&#xA;    var user2 = new User { UserName = &quot;bar&quot; };&#xD;&#xA;    var user3 = new User { UserName = &quot;baz&quot; };&#xD;&#xA;    var user4 = new User { UserName = &quot;jack&quot; };&#xD;&#xA;&#xD;&#xA;    using (var session = theStore.OpenSession())&#xD;&#xA;    {&#xD;&#xA;        session.Store(user1, user2, user3, user4);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;&#xD;&#xA;        session.Delete(user3);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;&#xD;&#xA;        var epoch = session.DocumentStore.Advanced.MetadataFor(user3).DeletedAt;&#xD;&#xA;        session.Delete(user4);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;&#xD;&#xA;        session.Query&lt;User&gt;().Where(x =&gt; x.DeletedSince(epoch.Value)).Select(x =&gt; x.UserName)&#xD;&#xA;            .ToList().ShouldHaveTheSameElementsAs(&quot;jack&quot;);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<p><em>Neither <code>DeletedSince</code> nor <code>DeletedBefore</code> are inclusive searches as shown</em></p>
 
 			      	</div>
 
