--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.3.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -124,6 +124,7 @@ Marten will build new database tables and functions for each new document type a
 <li><a href="/marten/documentation/documents/querying/batched_queries">Batched Queries</a></li>
 <li><a href="/marten/documentation/documents/querying/query_json">Query for Raw JSON</a></li>
 <li><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></li>
+<li><a href="/marten/documentation/documents/querying/metadata_queries">Metadata Queries</a></li>
 </ul>
 <h2 id="persisting-documents">Persisting Documents</h2>
 <p>The main service for updating and persisting documents is the <code>IDocumentSession</code>. An <code>IDocumentSession</code> is created by your <code>IDocumentStore</code> from above
