--- a/documentation/documents/querying/batched_queries/index.html
+++ b/documentation/documents/querying/batched_queries/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 1.2.4</a>
+		      <a href="/marten" class="navbar-brand">Marten 1.3.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/querying/compiled_queries" title="Compiled Queries">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/querying/paging" title="Paging">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/querying/metadata_queries" title="Metadata Queries">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -77,7 +77,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/querying/paging">Paging</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/querying/metadata_queries">Metadata Queries</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/querying/compiled_queries">Compiled Queries</a></p>
 
 		        </ul>
@@ -123,7 +123,7 @@ the data returned and sets the results of the <code>Task</code> objects handed o
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/querying/paging">Paging</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/querying/metadata_queries">Metadata Queries</a>
 
 				        </span>
 			      	</nav>
